--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 #My files
-CSSDG Quester/secret.py
-/secret.py
-secret.py
+secret.py/
+CSSDG Quester/secret.py/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
